# dagger-python-SDK-poc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pipeline.py  pyproject.toml
src/dagger_python_sdk_poc/: __main__.py
tests/: test_something.py
